# tribrato

./: .gitignore  CMakeLists.txt
.claude/: settings.local.json
.github/workflows/: build-mac.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VibratoEngine.cpp  VibratoEngine.h
